# oxygen

./: .gitignore  README.md
firmware/: Cargo.toml  Embed.toml  OxygenF7.ioc
firmware/src/: clock.rs  device.rs  main.rs
firmware/src/drivers/: hcsr04.rs  mod.rs  servos.rs
hardware/: .gitignore  OxygenF7-cache.lib  OxygenF7.kicad_pcb  OxygenF7.pro  OxygenF7.sch  OxygenF7_IO.sch  Sonrise.dcm  Sonrise.lib  sym-lib-table
hardware-f756/: OxygenF7-cache.lib  OxygenF7.kicad_pcb  OxygenF7.pro  OxygenF7.sch  OxygenF7_IO.sch
hardware-f756/Sonrise.pretty/: 10114830-10106LF_P1.25mm_Horizontal.kicad_mod
hardware/Sonrise.pretty/: JST_ZH_B4B-ZR_1x04_P1.50mm_Vertical.kicad_mod  LGA-10_2x2mm_P0.5mm.kicad_mod  PinHeader_08x03_P2.54mm_Vertical.kicad_mod
stm32cubemx-f756/: stm32cubemx-f756.ioc
