[package]
name = "oxygen"
version = "0.1.0"
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
stm32f7xx-hal = { version = "0.3.0", features = ["stm32f756"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
cortex-m-rt = "0.6.13"
