[package]
name = "oxygen"
version = "0.1.0"
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.7"
stm32f7xx-hal = { git = "https://github.com/iBelieve/stm32f7xx-hal.git", version = "0.3.0", features = ["stm32f756"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
mpu6000 = "0.2.1"
cortex-m-rtic = "0.5.6"
embedded-hal = "0.2.5"
shared-bus = { version = "0.2.2", features = ["cortex-m"] }
num_enum = { version = "0.5.1", default-features = false }
embedded-time = "0.11.0"
cast = { default-features = false, version = "0.2.2" }